# AMLS_II_assignment24_25

./: .gitignore  README.md  imports.py  main.py  pyproject.toml  swin_unetr_brats21_segmentation_3d.ipynb  unet_segmentation_3d_ignite.ipynb
.github/workflows/: check_code_quality.yml  main.yml
Datasets/: README.md
config/: config.py  config.yaml
data/: __init__.py  dataset.py
latex/: Report_AMLSII_24-25_SN24076607.aux  Report_AMLSII_24-25_SN24076607.bbl  Report_AMLSII_24-25_SN24076607.blg  Report_AMLSII_24-25_SN24076607.fdb_latexmk  Report_AMLSII_24-25_SN24076607.fls  Report_AMLSII_24-25_SN24076607.out  Report_AMLSII_24-25_SN24076607.tex  Report_AMLSII_24-25_SN24076607.xdv  refs.bib
models/: infer_yolo.py  train_3dunet.py  train_yolo.py
models/3dunet/: epoch_loss_values.txt
outputs/data_description/: additional_insight.txt  dataset_description.txt  descriptive_statistics.txt  motor_distribution.txt
outputs/submissions/: submission.csv
reference/: unetr_btcv_segmentation_3d.ipynb
reference/latex/: Report_AMLSII_24-25_SN24076607.aux  Report_AMLSII_24-25_SN24076607.bbl  Report_AMLSII_24-25_SN24076607.blg  Report_AMLSII_24-25_SN24076607.fdb_latexmk  Report_AMLSII_24-25_SN24076607.fls  Report_AMLSII_24-25_SN24076607.tex  Report_AMLSII_24-25_SN24076607.xdv  refs.bib
scripts/: test.py  train.py
src/: imports.py
src/config/: config.py  config.yaml
src/data/: create_yolo_dataset.py  dataset.py
src/models/: __init__.py  infer_yolo.py  train_3dunet.py  visualize_unet_training_process.py
utils/: __init__.py  score.py  swin_tools.py  visualization.py
(+8 files in other folders)
